# pi

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  RFC.md  TODO.md  codecov.yml  dev  rust-toolchain
.github/: codecov.yml
.github/workflows/: check.yml  dependency-review.yml  safety.yml  scheduled.yml  scorecards.yml  test.yml
docs/rfc/: 001-core-architecture.md  002-subagents.md  README.md
src/: config.rs  confirm.rs  context.rs  lib.rs  main.rs  mcp.rs  session.rs
src/llm/: anthropic.rs  mod.rs  openai_compat.rs
src/tools/: bash.rs  edit.rs  mod.rs  read_file.rs  write_file.rs
tests/: anthropic.rs  mcp_integration.rs  mock_mcp_server.sh  openai_compat.rs
