[package]
name = "pi-rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A multi-LLM coding agent CLI (OpenAI / Anthropic / Gemini / DeepSeek / Kimi)."
repository = "https://github.com/ben1009/pi-rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustyline = "16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "3.1.0"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "io-std", "signal"] }

[dev-dependencies]
wiremock = "0.6"
