[package]
name = "pi-rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A multi-LLM coding agent CLI (OpenAI / Anthropic / Gemini / DeepSeek / Kimi)."
repository = "https://github.com/ben1009/pi-rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustyline = "18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "3.1.1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "io-std", "signal"] }
tokio-stream = "0.1"
futures-util = "0.3"
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
wiremock = "0.6"
